# trade-vix

./: .gitignore  README.md  check_h1_performance.py  pyproject.toml  test_higher_orders.py  verify_rmse_pattern.py
artifacts/: garch_diagnostics.json
artifacts/h_10/: garch_metrics.json  garch_test_preds.pkl  garch_train_preds.pkl  garch_val_preds.pkl  lstm_rv_metrics.json  lstm_rv_test_preds.pkl  lstm_rv_train_preds.pkl  lstm_rv_val_preds.pkl  lstm_vix_metrics.json  lstm_vix_test_preds.pkl  lstm_vix_train_preds.pkl  lstm_vix_val_preds.pkl
artifacts/h_2/: garch_metrics.json  garch_test_preds.pkl  garch_train_preds.pkl  garch_val_preds.pkl  lstm_rv_metrics.json  lstm_rv_test_preds.pkl  lstm_rv_train_preds.pkl  lstm_rv_val_preds.pkl  lstm_vix_metrics.json  lstm_vix_test_preds.pkl  lstm_vix_train_preds.pkl  lstm_vix_val_preds.pkl
artifacts/h_30/: garch_metrics.json  garch_test_preds.pkl  garch_train_preds.pkl  garch_val_preds.pkl  lstm_rv_metrics.json  lstm_rv_test_preds.pkl  lstm_rv_train_preds.pkl  lstm_rv_val_preds.pkl  lstm_vix_metrics.json  lstm_vix_test_preds.pkl  lstm_vix_train_preds.pkl  (+1 more)
configs/: backtest.yaml  backtest_improved.yaml  backtest_spyonly.yaml  data.yaml  eval.yaml  train.yaml  wandb.yaml
docs/: README.md  data.md  models.md  strategies.md
presentation/: main.tex
scripts/: analyze_splits.py  compare_bias_fixes.py  diagnostics.py  download_data.py  garch_diagnostics.py  generate_data_plots.py  investigate_vix_strategy.py  regime_summary.py  run_backtest.py  run_eval.py  run_final_pipeline.py  run_train.py  test_backtest.py
(+72 files in other folders)
