[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-modelling"
version = "0.0.1"
description = "Volatility modelling utilities (data pipelines implemented)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.24",
    "yfinance>=0.2.50",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "tqdm>=4.66",
    "arch>=6.3",
    "torch>=2.3",
    "scikit-learn>=1.4",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

[tool.setuptools.packages.find]
where = ["src"]
